--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>Optimisation</title>
-
+	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+<link href="min/?f=myhost-exemple/a_optimiser/css/main.css" rel="stylesheet"><link href="min/?f=" rel="stylesheet">
     <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/main.css" rel="stylesheet">
+   
   </head>
 
   <body>
@@ -29,10 +29,10 @@
       <div class="jumbotron">
         <h1>Jumbotron heading</h1>
         <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-        <p><img src="images/chat.png" width="300"></p>
+        <p><img src="images/chat.png" ></p>
       </div>
 
-      <div class="row marketing" style="margin-top: 1em;">
+      <div class="row marketing" >
         <div class="col-lg-6">
           <h4>Subheading</h4>
           <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
@@ -64,7 +64,10 @@
 
   </body>
   <!-- jquery -->
-    <script src="js/jquery-1.12.1.min.js"></script>
-    <script src="js/fonctions.js"></script>
-    <script src="js/main.js"></script>
+  <script
+			  src="https://code.jquery.com/jquery-2.2.1.min.js"
+			  integrity="sha256-gvQgAFzTH6trSrAWoH1iPo9Xc96QxSZ3feW6kem+O00="
+			  crossorigin="anonymous"></script>
+    <script src="min/?f=myhost-exemple/a_optimiser/js/fonctions.js,myhost-exemple/a_optimiser/js/main.js"></script>
+
 </html>
